--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,8 @@
 JAMENDO_CLIENT_ID=1c7e3951
+SPOTIFY_CLIENT_ID=c3bf1cc37c894659b1fb4700dadea41c
+SPOTIFY_CLIENT_SECRET=c59617da14c442efb3b60c7bc732497e
+
+
+
 
 
